[gd_scene load_steps=5 format=3 uid="uid://dvvxmm5kwvyxs"]

[ext_resource type="Texture2D" uid="uid://bo3dt72533x5p" path="res://resources/sprites/delete_duplicates_game/tdesign_star-filled.png" id="1_1idve"]
[ext_resource type="Script" path="res://objects/riddles/duplicates/duplicate/duplicate.gd" id="1_a76or"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pg8xt"]
radius = 45.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nonh"]
size = Vector2(85, 85)

[node name="Duplicate" type="CharacterBody2D" groups=["duplicate"]]
collision_layer = 2
script = ExtResource("1_a76or")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_1idve")

[node name="CircleCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
shape = SubResource("CircleShape2D_pg8xt")
disabled = true

[node name="SquareCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
shape = SubResource("RectangleShape2D_3nonh")
disabled = true

[node name="TriangleCollision" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
visible = false
polygon = PackedVector2Array(6, -45.9, -4, -47.1, -4, -46, -5.5, -46, -9.5, -40, -10.6, -40, -12, -37.2, -12, -35.4, -12.4, -35, -13.6, -35, -15, -32.2, -15, -30.4, -19, -25.4, -19, -23.4, -19.4, -23, -20.6, -23, -22, -20.2, -22, -18.4, -22.4, -18, -23.6, -18, -25, -15.2, -25, -13.4, -29, -8.4, -29, -6.4, -29.4, -6, -30.6, -6, -32, -3.2, -32, -1.4, -32.4, -1, -33.6, -1, -35, 1.8, -35, 3.6, -39, 8.6, -39, 10.6, -39.4, 11, -40.6, 11, -42, 13.8, -42, 15.6, -42.4, 16, -43.6, 16, -45, 18.8, -45, 20.6, -49, 25.6, -49, 27.4, -50, 27.9, -50, 44.1, -47, 45.6, -47, 47, 46.4, 47, 49.4, 44, 50, 44, 50, 27.6, 49.4, 27, 48.6, 27, 48, 25.8, 48, 23.6, 44, 18.6, 44, 16.6, 42.4, 15, 41.6, 15, 41, 13.8, 41, 11.6, 39.4, 10, 38.6, 10, 38, 8.8, 38, 6.6, 34, 1.6, 34, -0.400002, 32.4, -2, 31.6, -2, 31, -3.2, 31, -5.4, 29.4, -7, 28.6, -7, 28, -8.2, 28, -10.4, 24, -15.4, 24, -17.4, 22.4, -19, 21.6, -19, 21, -20.2, 21, -22.4, 19.4, -24, 18.6, -24, 18, -25.2, 18, -27.4, 14, -32.4, 14, -34.4, 9, -40.4, 9, -42.5, 6, -44.6)
disabled = true

[node name="FlowerCollision" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
visible = false
polygon = PackedVector2Array(-5, -46, -5, -44.7, -7, -44, -9.5, -44, -14.5, -38, -15.7, -38, -18, -32.2, -18, -31.4, -19.8, -32, -29.3, -32, -33.3, -29, -35.5, -29, -38.5, -25, -39.6, -25, -42, -20.2, -42, -8.7, -36.6, 0, -39.6, 5, -41, 5, -41, 8, -42, 8, -42, 19.3, -39, 23.3, -39, 25.5, -33, 29.5, -33, 31, -30, 31, -30, 32.1, -19.9, 31, -17.7, 31, -16, 35.1, -16, 37.5, -5.4, 46, 4.3, 46, 7.3, 44, 9.5, 44, 14.5, 38, 15.7, 38, 18, 32.2, 18, 31.3, 19.8, 32, 29.3, 32, 37.3, 26, 38.7, 26, 40.7, 20, 42, 20, 42, 8.7, 36.6, 0, 39.6, -5, 41, -5, 41, -8, 42, -8, 42, -19.3, 39, -23.4, 39, -25.5, 33, -29.6, 33, -31, 30, -31, 30, -32.1, 19.9, -31, 17.7, -31, 16, -35.2, 16, -37.5, 10, -42.5, 10, -43.8, 6, -44.8, 6, -46)
disabled = true

[node name="HouseCollision" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
visible = false
polygon = PackedVector2Array(-3, -43, -3, -42, -4.5, -42, -7.5, -38, -9.4, -38, -37.4, -10, -39, -10, -39, -8, -40, -8, -39, 33, -39, 35.4, -34.4, 40, -13.6, 40, -11.6, 38, -9.5, 38, -7, 34.3, -7, 15, 7, 15, 7, 34.4, 10, 37.4, 10, 39, 12, 39, 12, 40, 33.4, 40, 38.4, 35, 40, 35, 39, -7, 39, -9.4, 9, -37.5, 9, -39, 6.4, -39, 4, -41.4, 4, -43)
disabled = true

[node name="MoonCollision" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
visible = false
polygon = PackedVector2Array(-9, -45.4, -9, -43.7, -11, -43, -14.4, -43, -16.4, -41, -18.4, -41, -24.4, -35, -26.5, -35, -33.5, -25, -34.8, -25, -35.8, -21, -36.8, -21, -40, -9.1, -40, 3.2, -38, 7.2, -38, 11.3, -34, 17.3, -34, 19.6, -32, 20.6, -32, 22.4, -22, 31.4, -22, 32.7, -12, 36.6, -12, 37.8, -3.1, 40, 9.2, 40, 14.2, 38, 17.4, 38, 19.4, 36, 22.4, 36, 25.4, 33, 27.5, 33, 30.5, 29, 32.5, 29, 39.5, 19, 40.7, 19, 42.7, 13, 44, 13, 44, 9, 44.7, 9, 45.2, 7.8, 44, 6.6, 44, 4.3, 41, 3.3, 41, 1.7, 32.7, 4, 23.2, 4, 19.2, 2, 16.3, 2, 10.3, -2, 8.5, -2, 2.5, -9, 1.7, -9, -0.299999, -14, -1.2, -14, -3.2, -24, -4, -24, -4, -32.9, -2, -37.8, -2, -40.4, -4, -42.4, -4, -43.7)
disabled = true

[node name="HeartCollision" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
visible = false
polygon = PackedVector2Array(-22, -40.1, -22, -39, -25.3, -39, -29.3, -36, -31.6, -36, -32.6, -34, -34.5, -34, -39.5, -27, -40.7, -27, -44, -18.2, -44, -6.7, -42, -3.7, -42, -0.599998, -38, 3.4, -38, 5.4, -3, 38.4, -3, 40, 2.4, 40, 36.4, 6, 37.6, 6, 40.6, 0, 41.8, 0, 42.9, -6, 44.1, -6, 43, -18.1, 43, -21.3, 40, -25.4, 40, -27.6, 38, -28.6, 38, -30.5, 32, -34.6, 32, -35.7, 21.2, -40, 11.8, -40, 3.8, -36, 1.4, -36, 0.400002, -34, -0.599998, -34, -1, -34.4, -1, -35.7, -7, -37.7, -7, -38.9)
disabled = true

[node name="StarCollision" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
visible = false
polygon = PackedVector2Array(3, -47.7, -2, -49.4, -2, -47.2, -3.7, -43, -4.7, -43, -12, -21.2, -12, -18.4, -14, -16.4, -14, -15, -37.1, -15, -49.2, -13, -50, -13, -50, -10.6, -48, -8.6, -48, -7, -45.5, -7, -31.4, 5, -29.4, 5, -22.4, 12, -29.8, 37, -31, 37, -31, 47.6, -29.9, 48.2, -0.400002, 27.7, 2.7, 30, 4.4, 30, 5.4, 32, 7.6, 32, 9, 33.4, 9, 35, 11.5, 35, 18.6, 41, 20.5, 41, 28.6, 48, 31.4, 48, 33, 46.4, 33, 44.8, 22, 12, 22, 11, 23.4, 11, 26, 8.4, 27.4, 8, 30, 5.4, 31.4, 5, 45.5, -7, 47.5, -7, 49.5, -10, 50, -13.9, 37, -15, 13.6, -15, 7, -33, 7, -36.2, 3, -44.2)
disabled = true
